# gitrepo-tools

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mk
config/: config.json
data/: repos-test-copy.db  repos-test.db
include/app/: tiny.hpp
include/gitrepo/: cli.hpp  config.hpp  data.hpp  scanner.hpp  tools.hpp  version.hpp
src/: cli.cpp  config.cpp  data.cpp  main.cpp  scanner.cpp  tools.cpp
tests/: cli_tests.cpp  config_tests.cpp  data_tests.cpp  main_unit.cpp  scanner_tests.cpp  tools_tests.cpp
tests/test-repo/: config
